--- a/lec6/templates/slide.html.j2
+++ b/lec6/templates/slide.html.j2
@@ -23,7 +23,7 @@
 
 <div align="center">
   <a href="{{ prev }}">⬅ Prev</a> |
-  <a href="contents.html">☰ Contents</a> |
+  <a href="index.html">☰ Contents</a> |
   <a href="{{ next }}">Next ➡</a>
 </div>
 
