--- a/lec6/style.css
+++ b/lec6/style.css
@@ -5,7 +5,7 @@ table.sample {
     font-size: 14px;
 }
 table.sample th {
-    background-color: paleturquoise;
+    background-color: palegoldenrod;
     border-width: 1px;
 	padding: 1px;
 	border-style: dotted;
